--- a/style.css
+++ b/style.css
@@ -2,24 +2,32 @@
   html {
     max-width: 100vw;
   }
-  .textmail-logo {
-    width: 300px;
+  .div-center {
+    width: 500px;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .textmail-logo {
+    width: 300px;
   }
 }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
   html {
     max-width: 100vw;
   }
-  .textmail-logo {
-    width: 300px;
+  .div-center {
+    width: 500px;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .textmail-logo {
+    width: 300px;
   }
 }
 @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
@@ -28,12 +36,16 @@
     margin: auto;
     margin-top: 5vh;
   }
-  .textmail-logo {
-    width: 400px;
+  .div-center {
+    width: 600px;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .textmail-logo {
+    width: 400px;
   }
 }
 @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
@@ -42,12 +54,16 @@
     margin: auto;
     margin-top: 5vh;
   }
-  .textmail-logo {
-    width: 400px;
+  .div-center {
+    width: 600px;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .textmail-logo {
+    width: 400px;
   }
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
@@ -56,12 +72,16 @@
     margin: auto;
     margin-top: 5vh;
   }
-  .textmail-logo {
-    width: 500px;
+  .div-center {
+    width: 700px;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .textmail-logo {
+    width: 500px;
   }
 }
 @media (min-width:1281px) { /* hi-res laptops and desktops */
@@ -70,12 +90,16 @@
     margin: auto;
     margin-top: 5vh;
   }
-  .textmail-logo {
-    width: 500px;
+  .div-center {
+    width: 700px;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .textmail-logo {
+    width: 500px;
   }
 }
 
@@ -117,6 +141,15 @@ footer {
   width: 100%;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.margin-text {
+  margin-top: 50px;
+}
+
+.italic-text {
+  font-style: italic;
+  margin-top: 50px;
 }
 
 .footer-text {
